Fix web app link to relative path

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             Ett spännande och interaktivt kortspel utvecklat i Python med moderna webbteknologier!
         </p>
         <div class="buttons">
-            <a href="./web_app/templates/index.html" class="btn btn-primary">🎮 Spela Webbversion</a>
+            <!-- الرابط المصحح -->
+            <a href="web_app/templates/index.html" class="btn btn-primary">🎮 Spela Webbversion</a>
             <a href="https://github.com/KSOM349/vand10a-projekt/tree/main/src" class="btn">🐍 Källkod (Python)</a>
             <a href="https://github.com/KSOM349/vand10a-projekt/tree/main/docs" class="btn">📚 Dokumentation</a>
         </div>
