Use absolute URL for web app

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </p>
         <div class="buttons">
             <!-- الرابط المصحح -->
-            <a href="web_app/templates/index.html" class="btn btn-primary">🎮 Spela Webbversion</a>
+            <a href="https://ksom349.github.io/vand10a-projekt/web_app/templates/index.html" class="btn btn-primary">🎮 Spela Webbversion</a>
             <a href="https://github.com/KSOM349/vand10a-projekt/tree/main/src" class="btn">🐍 Källkod (Python)</a>
             <a href="https://github.com/KSOM349/vand10a-projekt/tree/main/docs" class="btn">📚 Dokumentation</a>
         </div>
